# app/Models/Subscriber/Subscriber.php
@@ -8,4 +8,14 @@ use Illuminate\Database\Eloquent\Model;
 class Subscriber extends Model
 {
     use HasFactory;
+
+    protected $fillable = [
+        'platform_id',
+        'email',
+        'status'
+    ];
+
+    public function platform(){
+        return $this->hasMany('App\Models\Comment');
+    }
 }
